--- a/PolitieApplicatie/src/assets/css/styles.css
+++ b/PolitieApplicatie/src/assets/css/styles.css
@@ -1,9 +1,15 @@
-body {
+/*body {
     background-color: #1d1d1d;
     color: white;
     /* background-image: url("../images/warschau.jpg");
     background-repeat: no-repeat;
-    background-attachment: fixed; */
+    background-attachment: fixed; }*/
+body
+{
+    background: url('http://farm3.staticflickr.com/2832/12303719364_c25cecdc28_b.jpg') fixed;
+    background-size: cover;
+    padding: 0;
+    margin: 0;
 }
 
 .main {
