--- a/PolitieApplicatie/src/app/login/login.component.html
+++ b/PolitieApplicatie/src/app/login/login.component.html
@@ -18,11 +18,14 @@
                 <div class="remember-forgot">
                     <div class="row">
                         <div class="col-md-6">
+                            
                         </div>
                     </div>
                 </div>
                 </form>
             </div>
+            <div class="alert alert-danger" role="alert" *ngIf="error.length > 0">{{error}}
+                            </div>
         </div>
     </div>
 </div>
