--- a/PolitieApplicatie/src/app/vehicle/vehicle.component.html
+++ b/PolitieApplicatie/src/app/vehicle/vehicle.component.html
@@ -4,15 +4,13 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Details {{TOFDO}}</h5>
+              <h5 class="card-title">Details {{vehicle.licensePlate}}</h5>
               <h6 class="card-subtitle mb-2 text-muted">Here you can follow the selected car ofzo... blabla</h6>
               <p class="card-text">BLALALALALLALA</p>
               <ul class="card-text list-unstyled">
-                <li>license plate: {{TOFO}}</li>
-                <li>INFO: {{TOFO}}</li>
-                <li>INFO: {{TOFO}}</li>
-                <li>INFO: {{TOFO}}</li>
-                <li>INFO: {{TOFO}}</li>
+                <li>Vehicle id: {{vehicle.id}}</li>
+                <li>license plate:{{vehicle.licensePlate}}</li>
+                <li>vehicle type: {{vehicle.vehicleType}}</li>
               </ul>
             </div>
           </div>
@@ -23,23 +21,9 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Car history</h5>
-              <table class="table table-hover table-dark">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">License Plate</th>
-                <th scope="col">Type</th>
-            </tr>
-        </thead>
-        <tbody class="vehicles">
-            <tr *ngFor="let vehicle of vehicles"
-                (click)="onSelectVehicle(vehicle)">
-                <th scope="row">{{vehicle.id}}</th>
-                <td>{{vehicle.licensePlate}}</td>
-                <td>{{vehicle.vehicleType}}</td>
-            </tr>
-        </tbody>
-    </table>  
+              
+
+ 
           </div>
         </div>
       </div>
