--- a/PolitieApplicatie/src/app/vehicle/vehicle.component.html
+++ b/PolitieApplicatie/src/app/vehicle/vehicle.component.html
@@ -4,13 +4,13 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Details {{vehicle.licensePlate}}</h5>
+              <h5 class="card-title">Details | {{vehicle.licensePlate}}</h5>
               <h6 class="card-subtitle mb-2 text-muted">Here you can follow the selected car ofzo... blabla</h6>
               <p class="card-text">BLALALALALLALA</p>
               <ul class="card-text list-unstyled">
-                <li>Vehicle id: {{vehicle.id}}</li>
-                <li>license plate:{{vehicle.licensePlate}}</li>
-                <li>vehicle type: {{vehicle.vehicleType}}</li>
+                <li>Vehicle id : {{vehicle.id}}</li>
+                <li>license plate :{{vehicle.licensePlate}}</li>
+                <li>vehicle type : {{vehicle.vehicleType}}</li>
               </ul>
             </div>
           </div>
