added a bunch of stuff, like updating vehicles, adding cartrackers, some auth shit and more

--- a/Rekeningadministratie_Frontend/src/app/login/login.component.html
+++ b/Rekeningadministratie_Frontend/src/app/login/login.component.html
@@ -1,25 +1,29 @@
 <div class="main w-50 mt-5">
-        <table class="w-100">
-            <tr>
-                <td>
-                    <p class="mr-2 my-0 align-self-center">Username</p>
-                </td>
-                <td>
-                    <input name="username" type="text" class="form-control" placeholder="Username" [(ngModel)]="usercreds.username">
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p class="mr-2 my-0 align-self-center">Password</p>
-                </td>
-                <td>
-                    <input name="password" type="text" class="form-control" placeholder="Password" [(ngModel)]="usercreds.password">
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <button class="btn btn-outline-light float-right mt-1" (click)="login()"  data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Login</button>
-                </td>
-            </tr>
-        </table>
+    <table class="w-100">
+        <tr>
+            <td>
+                <p class="mr-2 my-0 align-self-center">Username</p>
+            </td>
+            <td>
+                <input name="username" type="text" class="form-control" placeholder="Username" [(ngModel)]="usercreds.username"  (keyup.enter)="login()">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <p class="mr-2 my-0 align-self-center">Password</p>
+            </td>
+            <td>
+                <input name="password" type="text" class="form-control" placeholder="Password" [(ngModel)]="usercreds.password" (keyup.enter)="login()">
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <button class="btn btn-outline-light float-right mt-1" (click)="login()" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Login</button>
+            </td>
+        </tr>
+    </table>
+    
+    <div *ngIf="alert !== null" class="alert alert-danger mt-sm-3" role="alert">
+        {{alert}}
+    </div>
 </div>
