kmrates bijna helemaal klaar

--- a/Rekeningadministratie_Frontend/src/app/invoice-list/invoice-list.component.html
+++ b/Rekeningadministratie_Frontend/src/app/invoice-list/invoice-list.component.html
@@ -60,4 +60,8 @@
             </tr>
         </tbody>
     </table>
+
+    <div *ngIf="isLoading" >
+        <span class="fas fa-spinner fa-pulse mx-auto" style="width: 100%"></span>
+    </div>
 </div>
