--- a/Rekeningadministratie_Frontend/src/app/cartracker-list/cartracker-list.component.html
+++ b/Rekeningadministratie_Frontend/src/app/cartracker-list/cartracker-list.component.html
@@ -44,3 +44,7 @@
         </tr>
     </tbody>
 </table>
+
+<div *ngIf="isLoading" >
+    <span class="fas fa-spinner fa-pulse mx-auto" style="width: 100%"></span>
+</div>
