--- a/Rekeningadministratie_Frontend/src/app/vehicle-list/vehicle-list.component.html
+++ b/Rekeningadministratie_Frontend/src/app/vehicle-list/vehicle-list.component.html
@@ -72,6 +72,10 @@
             </tr>
         </tbody>
     </table>
+
+    <div *ngIf="isLoading" >
+        <span class="fas fa-spinner fa-pulse mx-auto" style="width: 100%"></span>
+    </div>
 </div>
 
 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModal" aria-hidden="true">
