--- a/Rekeningadministratie_Frontend/src/app/vehicle-list/vehicle-list.component.html
+++ b/Rekeningadministratie_Frontend/src/app/vehicle-list/vehicle-list.component.html
@@ -68,6 +68,9 @@
                     <a (click)="edit(vehicle)" data-toggle="modal" data-target="#editModal" title="Edit">
                         <span class="fas fa-edit"></span>
                     </a>
+                    <a (click)="link(vehicle)" data-toggle="modal" data-target="#cartrackerModal" title="Link Cartracker">
+                        <span class="fas fa-location-arrow"></span>
+                    </a>
                 </td>
             </tr>
         </tbody>
@@ -105,6 +108,27 @@
                             </div>
                         </div>
                     </div>
+                </form>
+            </div>
+            <div class="modal-footer bg-dark">
+                <button type="button" class="btn btn-outline-light" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-light" (click)="updateVehicle()" data-dismiss="modal">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="cartrackerModal" tabindex="-1" role="dialog" aria-labelledby="cartrackerModal" aria-hidden="true">
+    <div class="modal-dialog bg-dark" role="document">
+        <div class="modal-content bg-dark">
+            <div class="modal-header bg-dark">
+                <h5 class="modal-title" id="cartrackerModalLabel">Link Cartracker</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body bg-dark">
+                <form *ngIf="editVehicle !== null">
                     <div class="form-group">
                         <label for="cartracker" class="col-form-label">Cartracker:</label>
                         <input name="cartracker" type="text" class="form-control dropdown-toggle" data-toggle="dropdown" placeholder="Search Cartracker" aria-label="Search"
@@ -119,7 +143,7 @@
             </div>
             <div class="modal-footer bg-dark">
                 <button type="button" class="btn btn-outline-light" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-light" (click)="updateVehicle()" data-dismiss="modal">Save</button>
+                <button type="button" class="btn btn-outline-light" (click)="linkVehicle()" data-dismiss="modal">Save</button>
             </div>
         </div>
     </div>
