--- a/PolitieApplicatie/src/app/vehicle-list/vehicle-list.component.html
+++ b/PolitieApplicatie/src/app/vehicle-list/vehicle-list.component.html
@@ -1,24 +1,29 @@
 <div class="main">
-    Vehicles
-    <form class="form-inline my-2 float-right">
-        <input name="filter" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" (keyup)="filterVehicles($event.target.value)">
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    <table class="table table-hover table-dark">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">License Plate</th>
-                <th scope="col">Type</th>
-            </tr>
-        </thead>
-        <tbody class="vehicles">
-            <tr *ngFor="let vehicle of filteredVehicles"
-                (click)="goToVehicleDetails(vehicle)">
-                <th scope="row">{{vehicle.id}}</th>
-                <td>{{vehicle.licensePlate}}</td>
-                <td>{{vehicle.vehicleType}}</td>
-            </tr>
-        </tbody>
-    </table>
+  Vehicles
+  <form class="form-inline my-2 float-right">
+    <input name="filter" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
+           (keyup)="filterVehicles($event.target.value)">
+    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+  </form>
+  <table class="table table-hover table-dark">
+    <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Cartracker ID</th>
+      <th scope="col">License Plate</th>
+      <th scope="col">Type</th>
+      <th scope="col">Is Stolen</th>
+    </tr>
+    </thead>
+    <tbody class="vehicles">
+    <tr *ngFor="let vehicle of filteredVehicles"
+        (click)="goToVehicleDetails(vehicle)">
+      <th scope="row">{{vehicle.id}}</th>
+      <td>{{vehicle.cartrackerHardware}}</td>
+      <td>{{vehicle.licensePlate}}</td>
+      <td>{{vehicle.vehicleType}}</td>
+      <td>{{vehicle.isStolen}}</td>
+    </tr>
+    </tbody>
+  </table>
 </div>
