oke echt de laatste

--- a/Rekeningadministratie_Frontend/src/app/login/login.component.html
+++ b/Rekeningadministratie_Frontend/src/app/login/login.component.html
@@ -13,7 +13,7 @@
                 <p class="mr-2 my-0 align-self-center">Password</p>
             </td>
             <td>
-                <input name="password" type="text" class="form-control" placeholder="Password" [(ngModel)]="usercreds.password" (keyup.enter)="login()">
+                <input name="password" type="password" class="form-control" placeholder="Password" [(ngModel)]="usercreds.password" (keyup.enter)="login()">
             </td>
         </tr>
         <tr>
