--- a/PolitieApplicatie/src/app/vehicle-track/vehicle-track.component.html
+++ b/PolitieApplicatie/src/app/vehicle-track/vehicle-track.component.html
@@ -6,7 +6,10 @@
         <div class="card-body">
           <h5 class="card-title">Details | {{vehicle.licensePlate}}</h5>
           <h6 class="card-subtitle mb-2 text-muted">Information on this vehicle</h6>
-          <p class="card-text">TODO</p>
+          <ul class="card-text list-unstyled">
+            <li>License Plate : {{vehicle.licensePlate}}</li>
+            <li>Tracker ID : {{vehicle.cartrackerHardware}}</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -22,7 +25,7 @@
             <agm-map
               [latitude]="points[0].lat"
               [longitude]="points[0].lng"
-              [zoom]="initZoom"
+              [zoom]="zoom"
               [disableDefaultUI]="false"
               [zoomControl]="false">
               <agm-marker
